# gstm

./: CHANGELOG.md  CONTRIBUTORS.txt  Cargo.toml  README.md
.github/workflows/: rust.yml
gstm_cli/: Cargo.toml
gstm_cli/src/: auth.rs  lib.rs  main.rs
gstm_core/: Cargo.toml
gstm_core/src/: lib.rs
gstm_core/tests/files/: get.json
src/: lib.rs  main.rs
src/list/: mod.rs
