[package]
name = "gstm_core"
version = "0.1.0"
authors = ["Tom <tom@fourzerofour.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.11"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
wiremock = "0.2"

[lib]
name = "gstm_core"
path = "src/lib.rs"
